image overflow fixed

--- a/style.css
+++ b/style.css
@@ -429,13 +429,15 @@ nav {
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   grid-gap: 20px;
 }
+.section7_imagewrapper {
+  overflow: hidden;
+}
 .card_image {
   max-height: 65%;
   object-fit: cover;
   width: 200px;
   filter: grayscale(1);
   transition: transform 3.2s, filter 3.2s;
-  overflow: hidden;
 }
 .card_image:hover {
   filter: grayscale(0);
